<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WireGoggles</string>

    <string name="about_text">WireGoggles 2.4.4\n© 2010-2017 Brian Nenninger\nComments and bug reports: bnenning@gmail.com\n\nSource Code: https://github.com/dozingcat/WireGoggles\n\nWireGoggles displays real-time wireframe outlines of what your camera is looking at. Touch the screen to show or hide the controls. The bottom buttons are:\nColor: Displays previews of all available color schemes in a grid. Touch the color you want to select it. The bottom right item with a &quot;Custom&quot; label lets you create your own color scheme. When you select it, buttons will appear in each corner and the center. Touch a corner button to set the color for that corner, and the center button to set the background color.\nQuality: Switches between medium and high quality. High quality may be less smooth, depending on the performance of your device.\nPinP: Toggles picture-in-picture mode which shows the normal camera view in a corner of the screen.\nChoose Picture: Allows you to select an existing picture on your device. The wireframe effect will be applied to the picture and it will be saved in the same way as pictures that you take in the app directly.\n\nSaving Pictures and Video:\nThe shutter button is in the upper left. Toggle between camera and video mode using the icon directly underneath the shutter. In camera mode, the shutter button is blue and will save a single picture. Pictures are saved to your SD card in the &quot;WireGoggles&quot; directory. After saving a picture, a preview will be shown in the upper right. Touch the preview to view it full screen.\n\nIn video mode, the shutter button is red. Touch it to start recording, and touch it again to stop.\n\nIf your device has multiple cameras, switch between them with the icon that shows a rear or front facing camera.\n\nThe gear icon opens the settings screen where you can control whether sound is recorded in videos, and the resolution of video recordings. High quality uses the maximum resolution your device\'s camera is capable of, but may result in inconsistent frame rates depending on your device\'s performance.\n\nYou can view your pictures and videos with the gallery icon below the settings gear. Your pictures and videos are shown in separate tabs. While viewing a picture or video, you can use the &quot;Colors&quot; button to apply a different color scheme, and the &quot;Share&quot; button to share it.\n\nWhen viewing a recorded video, you can play, pause, and single step through it. You can save individual frames with the &quot;Snapshot&quot; button, which saves images to the same WireGoggles directory that camera mode uses. \n\nYou can export your videos to WebM format (http://www.webmproject.org). WebM files can be viewed in the Chrome and Firefox web browsers, as well as media players such as VLC. You can also upload WebM files to your YouTube account. The &quot;Export&quot; button will export a copy of the video to WebM format; this may take a while depending on your device. When finished, you will have the option to share the video. Exported WebM files are stored on your SD card in the WireGoggles/video directory.\n\nRecording files are very large. Depending on your device\'s camera and performance, each second of video can take up to 3MB. Currently videos are limited to 60 seconds in length, to avoid inadvertently using too much space.\n\nWireGoggles uses several open source components, including libvpx for video encoding, vorbis-java for audio encoding, and the Open Intents color picker. Copyright and license information for these components is available at http://www.dozingcatsoftware.com/WireGoggles/legal.html</string>
    <string name="touchForOptions">Touch screen for options</string>
	<string name="colorButtonLabel">Colors</string>
	<string name="qualityButtonLabel">Quality</string>
    <string name="pipButtonLabel">PinP</string>
    <string name="convertImageButtonLabel">Choose Picture</string>
    <string name="chooseCustomColorsLabel">Custom</string>
	<string name="chooseCustomColorButtonLabel">Change</string>
	<string name="chooseCustomBackgroundColorButtonLabel">Change Background</string>
	<string name="customColorDoneLabel">Done</string>
	<string name="deleteImageButtonLabel">Delete Image</string>
	<string name="openGalleryButtonLabel">View In Gallery</string>
	<string name="exitViewImageButtonLabel">Return</string>
	<string name="startVideoRecordingButtonLabel">Start Recording</string>
	<string name="stopVideoRecordingButtonLabel">Stop Recording</string>
	<string name="videoLibraryButtonLabel">Library</string>
	<string name="noVideosFound">No video recordings found.</string>
	<string name="noImagesFound">No pictures found.</string>
	
	<string name="videoShareActionTitle">Share video using:</string>
	
	<string name="webmVideoFormatDescription">WebM video</string>
	<string name="webmExportDialogTitle">Exporting to WebM</string>
	<string name="webmExportDialogMessageVideo">Writing video track</string>
	<string name="webmExportDialogMessageAudio">Writing audio track</string>
	<string name="webmExportConfirmReplaceMessage">A WebM file already exists for this video. Do you want to export again and replace it?</string>

	<string name="zipVideoFormatDescription">ZIP file of video frames</string>
	<string name="zipExportDialogTitle">Creating ZIP archive</string>
	<string name="zipExportDialogMessageVideo">Writing video frames</string>
	<string name="zipExportDialogMessageAudio">Writing audio data</string>
	<string name="zipExportConfirmReplaceMessage">A ZIP archive already exists for this video. Do you want to export again and replace it?</string>

	<string name="recordAudioPrefsKey">recordAudio</string>
	<string name="recordingQualityPrefsKey">recordingQuality</string>
	<string name="recordHighQualityVideoPrefsKey">recordHighQualityVideo</string>
	<bool name="recordAudioDefault">true</bool>
	<bool name="recordHighQualityVideoDefault">false</bool>
	<string name="recordAudioPrefsTitle">Record audio</string>
	<string name="recordingQualityPrefsTitle">Video recording quality</string>
	<string name="recordHighQualityVideoPrefsMessageFormat" formatted="false">Video resolution will be %dx%d</string>

	<string name="videoExportTypePrefsKey">videoExport</string>
	<string name="videoExportTypePrefsTitle">Export recorded video as</string>

    <string name="autoConvertPicturesPrefsKey">autoConvertPictures</string>
    <string name="autoConvertPicturesPrefsTitle">Automatically convert camera pictures</string>

	<string name="controlsOnLeftPrefsKey">controlsOnLeft</string>
    <string name="controlsOnLeftPrefsTitle">Controls on left</string>

    <string name="cameraPermissionRequired">WireGoggles cannot run without permission to use the camera.</string>
    <string name="storagePermissionRequiredToTakePhoto">WireGoggles needs permission to access storage in order to save photos.</string>
    <string name="storagePermissionRequiredToGoToLibrary">WireGoggles needs permission to access storage in order to show your photo library.</string>
    <string name="disabledAudioDueToPermissionDenied">Audio recording has been disabled in the preferences. You can now record videos without audio.</string>
</resources>
