<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference android:key="@string/recordAudioPrefsKey" android:defaultValue="@bool/recordAudioDefault"
		android:title="@string/recordAudioPrefsTitle" />

	<com.dozingcatsoftware.eyeball.RecordingQualityPreference
	    android:key="@string/recordingQualityPrefsKey" android:defaultValue="LOW"
	    android:entries="@array/recordingQualityLabels" android:entryValues="@array/recordingQualityValues"
	    android:title="@string/recordingQualityPrefsTitle" />

	<ListPreference
	    android:key="@string/videoExportTypePrefsKey" android:defaultValue="WEBM"
	    android:entries="@array/videoExportTypeLables" android:entryValues="@array/videoExportTypeValues"
	    android:title="@string/videoExportTypePrefsTitle" />
		
    <CheckBoxPreference android:key="@string/autoConvertPicturesPrefsKey" android:enabled="true"
        android:title="@string/autoConvertPicturesPrefsTitle" />

    <CheckBoxPreference android:key="@string/controlsOnLeftPrefsKey" android:defaultValue="false"
        android:title="@string/controlsOnLeftPrefsTitle" />

</PreferenceScreen>
